--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
 
     <div class="gallery"></div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more is-hidden">Load more</button>
   </body>
 </html>
